force-app/main/default/objects/Goal__c/Goal__c.object-meta.xml
<CustomObject>
    <description
    >Defines what actions in Chatter that your participating users must do to earn points.</description>
    <label>Goal</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>