force-app/main/default/objects/Goal__c/fields/Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority__c</fullName>
    <label>Case Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>