force-app/main/default/objects/Goal__c/fields/Chatter_Type__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Type__c</fullName>
    <label>Chatter Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>