force-app/main/default/objects/Goal__c/fields/Last_Batch_Check_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Batch_Check_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Last Batch Check Time</label>
    <type>DateTime</type>
</CustomField>