force-app/main/default/objects/Goal__c/fields/Reward_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reward_Amount__c</fullName>
    <label>Reward Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>