force-app/main/default/objects/Goal__c/fields/Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Status__c</fullName>
    <label>Task Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>