force-app/main/default/objects/Goal__c/fields/Total_Points_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Total_Points_Awarded__c</fullName>
    <label>Total Points Awarded</label>
    <summarizedField>Achievement__c.Points_Awarded__c</summarizedField>
    <summaryForeignKey>Achievement__c.Goal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>