force-app/main/default/objects/Goal__c/validationRules/Amount_Greater_than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Greater_than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Reward_Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Reward_Amount__c</errorDisplayField>
    <errorMessage>Reward amount must be greater than zero</errorMessage>
</ValidationRule>